@@ -1,3 +1,8 @@
+2008-05-05  Dan Williams  <dcbw@redhat.com>
+
+	* src/connection-editor/page-wireless-security.c
+		- (update_connection): handle unencrypted connections without crashing
+
 2008-04-30  Tambet Ingo  <tambet@gmail.com>
 
 	* src/applet.c (constructor): Get system connections from dbus.
